Fixed issue on Safari with wrong image height

--- a/src/app/movies-lists/movies-list/movies-list.component.scss
+++ b/src/app/movies-lists/movies-list/movies-list.component.scss
@@ -60,6 +60,7 @@ h4 {
 
 .movies {
   display: flex;
+  align-items: flex-start;
   margin: 10px 0 10px 10px;
 
   img {
